# atcoder

./: README.md  setup-contest.sh  workspace.code-workspace
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
config/: cargo-atcoder.toml
contests/abc018/: Cargo.toml
contests/abc028/: Cargo.toml
contests/abc035/: Cargo.toml
contests/abc049/: Cargo.toml
contests/abc060/: Cargo.toml
contests/abc064/: Cargo.toml
contests/abc081/: Cargo.toml
contests/abc083/: Cargo.toml
contests/abc085/: Cargo.toml
contests/abc086/: Cargo.toml
contests/abc087/: Cargo.toml
contests/abc088/: Cargo.toml
contests/abc100/: Cargo.toml
contests/abc106/: Cargo.toml
contests/abc143/: Cargo.toml
contests/abc166/: Cargo.toml
contests/abc171/: Cargo.toml
contests/abc180/: Cargo.toml
contests/abc181/: Cargo.toml
contests/abc182/: Cargo.toml
contests/abc183/: Cargo.toml
contests/abc184/: Cargo.toml
contests/abc185/: Cargo.toml
contests/abc186/: Cargo.toml
contests/abc187/: Cargo.toml
contests/abc188/: Cargo.toml
contests/abc189/: Cargo.toml
contests/abc190/: Cargo.toml
contests/abc191/: Cargo.toml
contests/abc192/: Cargo.toml
contests/abc193/: Cargo.toml
contests/abc194/: Cargo.toml
contests/abc196/: Cargo.toml
contests/agc006/: Cargo.toml
contests/arc011/: Cargo.toml
contests/arc056/: Cargo.toml
contests/arc106/: Cargo.toml
contests/arc109/: Cargo.toml
contests/arc110/: Cargo.toml
contests/code-festival-2014-final/: Cargo.toml
docs/: algorithm.md  cheatsheet.md
mysnippet/: Cargo.toml  export_snippet.sh
(+9 files in other folders)
