[package]
name = "abc196"
version = "0.1.0"
authors = ["canpok1 <6isstrong@gmail.com>"]
edition = "2018"

# dependencies added to new project
[dependencies]
# competitive = { git = "https://github.com/tanakh/competitive-rs.git" }
proconio = { version = "=0.3.6", features = ["derive"] }

[profile.release]
lto = true
panic = 'abort'
